--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,8 @@
-tensorflow_hub==0.11.0
-pandas==1.1.3
-focal_loss==0.0.6
-streamlit==0.79.0
+tensorflow==2.1.0
 Keras==2.4.3
-matplotlib==3.3.2
-tensorflow==2.5.0rc0
-numpy==1.19.2
-ipython==7.22.0
+streamlit==0.79.0
+tensorflow_hub==0.11.0
+matplotlib==3.1.1
+~umpy==1.16.5
+numpy==1.20.2
 Pillow==8.2.0
