--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,6 @@ Keras==2.4.3
 matplotlib==3.1.1
 streamlit==0.79.0
 ~umpy==1.16.5
-tensorflow==2.1.0
+tensorflow-cpu==2.1.0
 numpy==1.20.2
 Pillow==8.2.0
