--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,6 @@ tensorflow_hub==0.11.0
 Keras==2.4.3
 matplotlib==3.1.1
 streamlit==0.79.0
-tensorflow-cpu==2.1.0
+tensorflow==2.1.0
 numpy==1.20.2
 Pillow==8.2.0
