--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 tensorflow_hub==0.11.0
 Keras==2.4.3
-matplotlib==3.1.1
+matplotlib==3.2.2
 streamlit==0.79.0
-tensorflow-cpu==2.2.0
-numpy==1.20.2
+tensorflow-cpu==2.4.1
+numpy==1.19.5
 Pillow==8.2.0
 h5py==2.10.0
 scipy==1.4.1
+pillow==7.1.2
