--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,7 @@ tensorflow_hub==0.11.0
 Keras==2.4.3
 matplotlib==3.2.2
 streamlit==0.77.0
-tensorflow-cpu==2.4.1
+tensorflow==2.4.1
 numpy==1.19.5
 Pillow==7.1.2
 h5py==2.10.0
-scipy==1.4.1
